--- a/scss/_dashboard.scss
+++ b/scss/_dashboard.scss
@@ -23,7 +23,9 @@
 		}
 		@media screen and (min-width: 768px) {}
 		@media screen and (min-width: 900px) {}
-		@media screen and (min-width: 1024px) {}
+		@media screen and (min-width: 1024px) {
+			padding-top: 15%;
+		}
 		@media screen and (min-width: 1200px) {}
 		@media screen and (min-width: 1440px) {}
 
