--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,6 +14,19 @@
 	border-bottom: 1px solid #ffffff;
 	z-index: 100;
 
+	@media screen and (min-width: 320px) {}
+	@media screen and (min-width: 375px) {}
+	@media screen and (min-width: 425px) {}
+	@media screen and (min-width: 500px) {}
+	@media screen and (min-width: 700px) {}
+	@media screen and (min-width: 768px) {
+		padding: 1%;
+	}
+	@media screen and (min-width: 900px) {}
+	@media screen and (min-width: 1024px) {}
+	@media screen and (min-width: 1200px) {}
+	@media screen and (min-width: 1440px) {}
+
 	#header-logo {
 		height: auto;
 		width: 25%;
@@ -37,7 +50,9 @@
 		@media screen and (min-width: 700px) {
 			width: 12%;
 		}
-		@media screen and (min-width: 768px) {}
+		@media screen and (min-width: 768px) {
+			width: 10%;
+		}
 		@media screen and (min-width: 900px) {
 			width: 10%;
 		}
@@ -98,102 +113,4 @@
 			width: 92%;
 		}
 	}
-} // END HEADER-PRIMARY
-
-#header-primary2 {
-	height: auto;
-	width: 100%;
-	display: block;
-	position: fixed;
-	top: 0%;
-	left: 0%;
-	background-color: $marvel-blue;
-	border-bottom: 2px solid #ffffff;
-
-	#header-logo {
-		height: auto;
-		width: 25%;
-		display: inline-block;
-		float: left;
-
-		a, img {
-			height: auto;
-			width: 100%;
-			display: block;
-		}
-
-		@media screen and (min-width: 320px) {}
-		@media screen and (min-width: 375px) {}
-		@media screen and (min-width: 425px) {}
-		@media screen and (min-width: 500px) {
-			width: 15%;
-		}
-		@media screen and (min-width: 700px) {}
-		@media screen and (min-width: 768px) {}
-		@media screen and (min-width: 900px) {}
-		@media screen and (min-width: 1024px) {
-			width: 10%;
-		}
-		@media screen and (min-width: 1200px) {}
-		@media screen and (min-width: 1440px) {}
-	} // END HEADER-LOGO
-
-	#start-button {
-		height: 100%;
-		width: 75%;
-		display: inline;
-		float: left;
-		position: relative;
-
-		.button {
-			height: auto;
-			width: 80%;
-			display: block;
-			margin: 0% auto;
-			position: relative;
-			top: 50%;
-			transform: translateY(40%);
-		}
-
-		@media screen and (min-width: 320px) {}
-		@media screen and (min-width: 375px) {}
-		@media screen and (min-width: 425px) {
-			.button {
-				transform: translateY(50%);
-			}
-		}
-		@media screen and (min-width: 500px) {
-			width: 85%;
-
-			.button {
-				transform: translateY(20%);
-			}
-		}
-		@media screen and (min-width: 700px) {
-			.button {
-				transform: translateY(25%);
-			}
-		}
-		@media screen and (min-width: 768px) {}
-		@media screen and (min-width: 900px) {
-			.button {
-				transform: translateY(35%);
-			}
-		}
-		@media screen and (min-width: 1024px) {
-			.button {
-				width: 20%;
-				padding: 1%;
-				float: right;
-				transform: translateY(40%);
-			}
-		}
-		@media screen and (min-width: 1200px) {
-			.button {
-				font-size: 1.25em;
-				transform: translateY(45%);
-			}
-		}
-		@media screen and (min-width: 1440px) {}
-	} // END START BUTTON
 } // END HEADER-PRIMARY
